--- a/components/_bio.scss
+++ b/components/_bio.scss
@@ -5,7 +5,7 @@
   grid-template-rows: auto auto auto;
   align-items: center;
   padding: 2rem 0;
-  height: 80vh;
+  height: auto;
 }
 
 .bio__heading {
@@ -18,6 +18,7 @@
   letter-spacing: 0.05em;
   font-size: 70px;
   align-self: end;
+  color: var(--color-blue-600);
   margin-bottom: 20px;
 }
 
