edit section padding

--- a/components/_bio.scss
+++ b/components/_bio.scss
@@ -4,7 +4,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
   align-items: center;
-  padding: 2rem 0;
+  padding: 7.8rem 0;
   height: auto;
 }
 
@@ -47,7 +47,7 @@
   font-family: var(--font-family-poppins);
   font-weight: 600;
   font-size: 30px;
-  color: var(--color-text-primary);
+  color: var(--color-blue-800);
   margin: 5px;
 }
 
