--- a/components/_bio.scss
+++ b/components/_bio.scss
@@ -1,10 +1,10 @@
-/* Bio Section */
+/* Enhanced Bio Section */
 .bio {
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: auto auto;
   align-items: center;
-  gap: 3rem;
+  gap: 0;
   padding: 8rem 0;
   height: auto;
 }
@@ -22,6 +22,7 @@
   font-size: clamp(45px, 5vw, 70px);
   color: var(--color-blue-600);
   margin-bottom: 2rem;
+  padding-left: 170px;
 }
 
 .bio__description {
@@ -31,6 +32,7 @@
   flex-direction: column;
   gap: 2rem;
   align-items: flex-start;
+  padding-left: 170px;
 }
 
 .bio__description_container {
@@ -85,12 +87,10 @@
 .bio__img {
   grid-column: 2;
   grid-row: 1 / 3;
-  height: 450px;
+  height: 550px;
   max-width: 100%;
-  object-fit: cover;
   justify-self: center;
   align-self: center;
-  border-radius: 15px;
 }
 
 .bio__cv {
